<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.texttechnologylab.project.parliament_browser_01_montag_2</groupId>
    <artifactId >Parliament_browser_01_montag_2</artifactId >
    <version >0.1</version>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

    <build>
        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.0</version>
                <configuration>
                    <argLine>
                        --illegal-access=permit
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>2.22.0</version>
                <configuration>
                    <argLine>
                        --illegal-access=permit
                    </argLine>
                </configuration>
            </plugin>


        </plugins>
    </build>

    <dependencies>

        <!--Mongo DB Java Driver-->
        <dependency>
            <groupId>org.mongodb</groupId>
            <artifactId>mongo-java-driver</artifactId>
            <version>3.12.11</version>
        </dependency>

        <!--JUnit Jupiter Test Engine-->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>RELEASE</version>
            <scope>test</scope>
        </dependency>

        <!--Docker Unified UIMA Interfaces, um effektive Nutzung der NLP Methoden-->
        <dependency>
            <groupId>com.github.texttechnologylab</groupId>
            <artifactId>DockerUnifiedUIMAInterface</artifactId>
            <version>1.0</version>
        </dependency>

        <!--UIMA für Verarbeitung der unstrukturierten Informationen-->
        <dependency>
            <groupId>org.apache.uima</groupId>
            <artifactId>uimaj-core</artifactId>
            <version>2.11.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.uima</groupId>
            <artifactId>uimafit-core</artifactId>
            <version>2.5.0</version>
        </dependency>
        <dependency>
            <groupId>com.github.texttechnologylab</groupId>
            <artifactId>UIMATypeSystem</artifactId>
            <version>960ef0cc00</version>
        </dependency>
        <dependency>
            <groupId>com.github.texttechnologylab.textimager-uima</groupId>
            <artifactId>textimager-uima-types</artifactId>
            <version>8efebf1980</version>
            <exclusions>
                <exclusion>
                    <groupId>com.github.texttechnologylab</groupId>
                    <artifactId>UIMATypeSystem</artifactId>
                </exclusion>
            </exclusions>
        </dependency>


        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.15.2</version>
        </dependency>

        <!-- Freemarker template engine -->
        <dependency>
            <groupId>org.freemarker</groupId>
            <artifactId>freemarker</artifactId>
            <version>2.3.32</version>
        </dependency>
        <dependency>
            <groupId>com.sparkjava</groupId>
            <artifactId>spark-template-freemarker</artifactId>
            <version>2.7.1</version>
        </dependency>

        


    </dependencies>

</project>
